# calynda-for-wii

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SETUP_GUIDE.md  backend_strategy.md  bytecode_isa.md  hello.cal  steps.md  version_wishlist.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/agents/: calynda.agent.md  game-engine.agent.md  wii-internals.agent.md
.github/workflows/: copilot-swe-agent.yml  release.yml
compiler/: COMPILATION_PIPELINE.md  Makefile  calynda_fork.ebnf  calynda_v2.ebnf  install.sh  run_tests.sh
compiler/src/: ast.c  ast.h  ast_dump.c  bytecode.c  bytecode.h  bytecode_dump.c  codegen.c  hir.c  (+18 more)
decompiler/: Makefile  README.md  install.sh
game/: build.sh
mcp-server/: README.md  package-lock.json  package.json  pyproject.toml  server.py  test_server.py  tsconfig.json
mcp-server/src/: index.ts
mcp-server/src/analyzer/: diagnostics.ts  semantic.ts  types.ts
mcp-server/src/knowledge/: examples.ts  grammar.ts  keywords.ts  types.ts
mcp-server/src/parser/: ast.ts  lexer.ts  parser.ts
mcp-server/src/prompts/: index.ts
mcp-server/src/resources/: examples.ts  grammar.ts  keywords.ts  types.ts
mcp-server/src/tools/: analyzer.ts  completer.ts  examples.ts  explainer.ts  formatter.ts  validator.ts
solid_example/: counter.cal
solid_runtime/: Makefile
solite_runtime/: Makefile
src/: tokenizer.c  tokenizer.h  type_checker.c
tests/: test_tokenizer.c  test_type_checker.c
tools/: obj2c3d.py
vscode-calynda/: README.md  install.sh  language-configuration.json  package.json
(+394 files in other folders)
