[project]
name = "calynda-for-wii-mcp"
version = "0.1.0"
description = "MCP server exposing the Calynda-for-Wii compiler, decompiler, language, and Wii-internals knowledge base. Zero dependencies."
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
